# calendly

./: Cargo.toml  Readme.md  calendarnote.md  calendarroute.md  usertest.md
src/: app.rs  main.rs
src/config/: database.rs  environment.rs  mod.rs
src/errors/: error.rs  mod.rs
src/middleware/: auth.rs  mod.rs
src/modules/: mod.rs
src/modules/calendar/: calendar_controller.rs  calendar_crud.rs  calendar_model.rs  calendar_router.rs  calendar_schema.rs  mod.rs
src/modules/user/: mod.rs  user_controller.rs  user_crud.rs  user_model.rs  user_router.rs  user_schema.rs
src/services/: email.rs  mod.rs
src/utils/: mod.rs
